add_executable(consumer_producer consumer_producer.cpp)
add_executable(consumer_producer_per_cycle consumer_producer_per_cycle.cpp)
add_executable(parent_child parent_child.cpp)
add_executable(mesh2d mesh2d.cpp)
target_link_libraries(consumer_producer wolf_sim)
target_link_libraries(parent_child wolf_sim)
target_link_libraries(consumer_producer_per_cycle wolf_sim)
target_link_libraries(mesh2d wolf_sim)